[tool.poetry]
name = "callable-graph"
version = "1.0.0"
description = "A package to support function compositions and callable, directed acyclic graphs."
authors = ["richard.harris <richard.w.harris@mac.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
pydantic = "^1.9.1"
graphviz = { version = "^0.20", optional = true }
colour = { version = "^0.1.5", optional = true }
jupyter = { version = "^1.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
pytest-env = "^0.6.2"
black = "^22.3.0"

[tool.poetry.extras]
viz = ["jupyter", "graphviz", "colour"]

[tool.poetry.scripts]
to-mermaid = 'callable_graph.visualisation._run_mermaid:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
