[tool.poetry]
name = "callable-graph"
version = "1.0.0"
description = "A package to support function compositions and callable, directed acyclic graphs."
authors = ["Richard Harris <richard.w.harris@mac.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
pydantic = {version= "^2.4.2", optional = true}
pandera = { version = "^0.17.2", optional = true }
colour = { version = "^0.1.5", optional = true }
jupyter = { version = "^1.0.0", optional = true }
graphviz = { version = "^0.20.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^22.3.0"

[tool.poetry.extras]
viz = ["jupyter", "graphviz", "colour"]
data = ["pandera", "pydantic"]

[tool.poetry.scripts]
to-mermaid = 'callable_graph.visualisation._run_mermaid:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
